--- a/pages/mine/mine.less
+++ b/pages/mine/mine.less
@@ -115,6 +115,105 @@
     }
   }
 
+  .envelop-container{
+    margin-top: 1vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    .myAvatar{
+      width: 30vw; height: 30vw;
+      border-radius: 50%;
+      border: white solid 4px;
+      overflow: hidden;
+      z-index: 1;
+    }
+    .paper{
+      position: absolute;
+      width: 93vw;
+      height: 22vh;
+      bottom: 45vh;
+      background: #FFFFFF;
+      mix-blend-mode: normal;
+      opacity: 0.95;
+      border-radius: 8px;
+      z-index: -1;
+      text-align: center;
+      text{
+        position: relative;
+        top: 7vh;
+        // padding-top: 40%;
+        font-weight: 700;
+        font-size: 30px;
+        line-height: 36px;
+        color: #9879BF;
+      }
+    }
+    .envelop{
+      width: 100vw;
+      height: 60vh;
+      position: absolute;
+      bottom: 0;
+      z-index: 2;
+    }
+  }
+
+  .menu{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    z-index: 3;
+    margin-top: 7vh;
+    .invite{
+      position: relative;
+      margin-right: 10vw;
+      display: flex;
+      flex-direction: row;
+      background: #BA9CC0;
+      border-radius: 8px;
+      width: 142px;
+      height:28px;
+      image{
+        position: absolute;
+        bottom: -6px;
+        width: 53px;
+        height: 48px;
+        overflow: visible;
+      }
+      text{
+        color: white;
+        margin-left: 15vw;
+        font-weight: 400;
+        font-size: 15px;
+        line-height: 27px;
+        color: #FFFFFF;
+      }
+    }
+    .reward{
+      position: relative;
+      display: flex;
+      flex-direction: row;
+      background: #BA9CC0;
+      border-radius: 8px;
+      width: 142px;
+      height:28px;
+      image{
+        position: absolute;
+        bottom: -8px;
+        left: 3px;
+        width: 35px;
+        height: 35px;
+      }
+      text{
+        color: white;
+        margin-left: 15vw;
+        font-weight: 400;
+        font-size: 15px;
+        line-height: 27px;
+        color: #FFFFFF;
+      }
+    }
+  }
+
   .menu-grid {
     position: absolute;
     top: 548rpx; bottom: 0;
@@ -167,80 +266,203 @@
     }
   }
 
-  .room-list {
-    position: absolute;
-    top: 548rpx; bottom: 0;
-    .label {
-      display: block;
-      width: fit-content;
-      height: 28rpx;
-      line-height: 28rpx;
-      font-size: 28rpx;
-      margin-left: 80rpx;
-    }
-    .room-card {
+  .room-list{
+    height: 44vh;
+    z-index: 4;
+    margin-top: 5vh;
+    .room{
       position: relative;
-      width: 85%;
-      height: 192rpx;
-      background-color: rgba(255,255,255,0.3);
-      border-radius: 36rpx;
-      margin: 28rpx auto;
-      display: flex;
-      flex-direction: row;
-      align-content: center;
-      align-items: center;
-      .room {
-        width: fit-content;
-        height: calc(100% - 32rpx);
-        padding: 32rpx;
-      }
-      .info {
-        width: 60%;
-        height: 100%;
-        display: flex;
-        flex-direction: column;
-        .user {
-          font-size: 24rpx;
-          margin-top: 24rpx;
-        }
-        .name {
-          width: fit-content;
-          padding: 8rpx 16rpx;
-          background-color: rgba(0,0,0,0.2);
-          color: white;
-          font-size: 24rpx;
-          border-radius: 16rpx;
-          margin: 8rpx 0;
-        }
-      }
-      .enter-tips {
-        position: absolute;
-        bottom: 16rpx;
-        right: 32rpx;
-        width: 128rpx;
-        height: 32rpx;
-        line-height: 32rpx;
-        font-size: 24rpx;
+      margin-bottom: 1vh;
+      margin-left: 13vw;
+      width: 80vw;
+      height: 10vh;
+      background: #E9DBEB;
+      border-radius: 6px;
+    }
+    .room-pic{
+      position: absolute;
+      top: 5px;
+      left: -30px;
+      width: 18.5vw;
+      height: 8.9vh;
+      display: inline-block;
+      filter: drop-shadow(4px 4px 4px rgba(0, 0, 0, 0.25));
+      border-radius: 6px;
+    }
+    .room-info{
+      z-index: 6;
+      padding-top: 1.5vh;
+      margin-left: 18vw;
+      .room-num-name{
+        margin-bottom: 2px;
         display: flex;
         flex-direction: row;
-        align-content: center;
         align-items: center;
-        .enter {
-          display: block;
-          width: 24rpx;
-          height: 24rpx;
-          margin-left: 8rpx;
+        .room-num{
+          width: 15px;
+          height: 15px;
+          border-radius: 50%;
+          background: #BA9CC0;
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          color: white;
+          font-size: 15px;
+          margin-right: 3px;
+        }
+        .room-name{
+          font-weight: 600;
+          font-size: 15px;
+          color: #464499;
         }
       }
-      .star {
-        position: absolute;
-        top: 16rpx;
-        right: 32rpx;
-        width: 32rpx;
-        height: 32rpx;
+      .room-owner{
+        margin-bottom: 2px;
+        margin-left: 2px;
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        width: 57px;
+        height: 9px;
+        background: #BA9CC0;
+        border-radius: 2px;
+        image{
+          margin: 0 1.5px;
+          width: 7px;
+          height: 7px;
+          border-radius: 2px;
+        }
+        text{
+          font-weight: 400;
+          font-size: 8px;
+          line-height: 11px;
+          color: #EFE5F0;
+        }
+      }
+      .room-slogan{
+        margin-bottom: 2px;
+        margin-left: 2px;
+        font-weight: 400;
+        font-size: 10px;
+        line-height: 14px;
+        color: #989898;
+      }
+      .stars{
+        display: flex;
+        flex-direction: row;
+        image{
+          width: 15px;
+          height: 13px;
+          padding-right: 1px;
+        }
       }
     }
+    .enter{
+      z-index: 6;
+      position: absolute;
+      right: 3vw;
+      top: 6.2vh;
+      width: 44px;
+      height: 19px;
+      background: #816EA8;
+      border-radius: 10px;
+      color: white;
+      text-align: center;
+      line-height: 18px;
+    }
+    .bubble1{
+      z-index: 5;
+      width: 49px;
+      height: 49px;
+      position: absolute;
+      left: 10vw;
+      top: 1.5vh;
+    }
+    .bubble2{
+      z-index: 5;
+      width: 151px;
+      height: 118px;
+      position: absolute;
+      top: -2vh;
+      right: 0;
+    }
   }
+
+
+  // .room-list {
+  //   position: absolute;
+  //   top: 548rpx; bottom: 0;
+  //   .label {
+  //     display: block;
+  //     width: fit-content;
+  //     height: 28rpx;
+  //     line-height: 28rpx;
+  //     font-size: 28rpx;
+  //     margin-left: 80rpx;
+  //   }
+  //   .room-card {
+  //     position: relative;
+  //     width: 85%;
+  //     height: 192rpx;
+  //     background-color: rgba(255,255,255,0.3);
+  //     border-radius: 36rpx;
+  //     margin: 28rpx auto;
+  //     display: flex;
+  //     flex-direction: row;
+  //     align-content: center;
+  //     align-items: center;
+  //     .room {
+  //       width: fit-content;
+  //       height: calc(100% - 32rpx);
+  //       padding: 32rpx;
+  //     }
+  //     .info {
+  //       width: 60%;
+  //       height: 100%;
+  //       display: flex;
+  //       flex-direction: column;
+  //       .user {
+  //         font-size: 24rpx;
+  //         margin-top: 24rpx;
+  //       }
+  //       .name {
+  //         width: fit-content;
+  //         padding: 8rpx 16rpx;
+  //         background-color: rgba(0,0,0,0.2);
+  //         color: white;
+  //         font-size: 24rpx;
+  //         border-radius: 16rpx;
+  //         margin: 8rpx 0;
+  //       }
+  //     }
+  //     .enter-tips {
+  //       position: absolute;
+  //       bottom: 16rpx;
+  //       right: 32rpx;
+  //       width: 128rpx;
+  //       height: 32rpx;
+  //       line-height: 32rpx;
+  //       font-size: 24rpx;
+  //       display: flex;
+  //       flex-direction: row;
+  //       align-content: center;
+  //       align-items: center;
+  //       .enter {
+  //         display: block;
+  //         width: 24rpx;
+  //         height: 24rpx;
+  //         margin-left: 8rpx;
+  //       }
+  //     }
+  //     .star {
+  //       position: absolute;
+  //       top: 16rpx;
+  //       right: 32rpx;
+  //       width: 32rpx;
+  //       height: 32rpx;
+  //     }
+  //   }
+  // }
 }
 
 .info-window {
