--- a/pages/main/main.less
+++ b/pages/main/main.less
@@ -18,7 +18,7 @@
   right: 0;
   width: 100vw;
   height: 100vh;
-  //background:-webkit-linear-gradient(top,#C7E1FA,#4F8DCC);
+  background:-webkit-linear-gradient(top,#C7E1FA,#4F8DCC);
   z-index: -100;
 }
 
@@ -163,7 +163,7 @@
       }
 
     }
-  
+
     // .room-info.focusing {
     //   margin-top: 10%;
     // }
