--- a/pages/mine/mine.wxml
+++ b/pages/mine/mine.wxml
@@ -124,7 +124,7 @@
       <!--      </view>-->
       <!--      <image class="star" src="../../images/star.png"></image>-->
       <!--    </view> -->
-<!-- <!--    </scroll-view> -->
+<!-- </scroll-view> -->
   </view>
 </view>
 
