mine页收藏框整体位置调整

--- a/pages/square/square.less
+++ b/pages/square/square.less
@@ -220,6 +220,7 @@ page{
   overflow: scroll;
 
   .room {
+    margin-collapse:abs();
     display: inline-block;
     // display: flex;
     flex-direction: column;
