--- a/pages/mine/mine.less
+++ b/pages/mine/mine.less
@@ -272,19 +272,19 @@
     margin-top: 5vh;
     .room{
       position: relative;
-      margin-bottom: 1vh;
-      margin-left: 13vw;
-      width: 80vw;
+      margin-top: 3vh;
+      margin-left: 2vw;
+      width: 96vw;
       height: 10vh;
       background: #E9DBEB;
       border-radius: 6px;
     }
     .room-pic{
       position: absolute;
-      top: 5px;
-      left: -30px;
-      width: 18.5vw;
-      height: 8.9vh;
+      top: -2vh;
+      left: -5px;
+      width: 24.7vw;
+      height: 26vw;
       display: inline-block;
       filter: drop-shadow(4px 4px 4px rgba(0, 0, 0, 0.25));
       border-radius: 6px;
@@ -292,7 +292,7 @@
     .room-info{
       z-index: 6;
       padding-top: 0.6vh;
-      margin-left: 18vw;
+      margin-left: 28vw;
       .room-num-name{
         margin-bottom: 2px;
         display: flex;
@@ -311,6 +311,8 @@
           margin-right: 3px;
         }
         .room-name{
+          font-family: 'Dubai';
+          font-style: normal;
           font-weight: 600;
           font-size: 2.6vh;
           color: #464499;
@@ -353,8 +355,8 @@
       }
       .stars{
         margin-left: 5vw;
-        margin-top: 0.8vh;
-        margin-bottom: 0.8vh;
+        // margin-top: 0.6vh;
+        margin-bottom: 1vh;
         display: flex;
         flex-direction: row;
         image{
@@ -375,7 +377,7 @@
       z-index: 6;
       position: absolute;
       right: 3vw;
-      top: 6.2vh;
+      top: 6.4vh;
       width: 44px;
       height: 19px;
       background: #816EA8;
