--- a/pages/mine/mine.wxml
+++ b/pages/mine/mine.wxml
@@ -1,5 +1,4 @@
-<view class="background"
-      style="background: -webkit-linear-gradient(top, #{{room.gradientColors[0]}}, #{{room.gradientColors[1]}}" />
+<view class="background" style="{{theme.backgroundStyle}}" />
 <view class="content">
   <view class="page">
     <!-- <view class="player-info">
