[Enhancement] 完善主题功能

--- a/pages/main/main.wxml
+++ b/pages/main/main.wxml
@@ -252,4 +252,7 @@
 
 <loading wx:if="{{isLoading}}"/>
 
-<real-tab-bar curPageIndex="0" wx:if="{{!runtimeFocus}}"></real-tab-bar>
+<real-tab-bar curPageIndex="0"
+              lightColor="{{theme.lightColor}}"
+              darkColor="{{theme.darkColor}}"
+              wx:if="{{!runtimeFocus}}"/>
