--- a/pages/shop/shop.wxml
+++ b/pages/shop/shop.wxml
@@ -1,3 +1,4 @@
+<view class="background" style="{{theme.backgroundStyle}}" />
 <view class="page">
   <canvas type='webgl' id="main-canvas"></canvas>
   <!-- <gold-level-display gold="{{player.gold}}" level="{{player.level}}" expRate="{{player.expRate}}"/> -->
