--- a/components/real-tab-bar/real-tab-bar.less
+++ b/components/real-tab-bar/real-tab-bar.less
@@ -25,6 +25,14 @@
     height: 100%;
     margin-top: 32rpx;
 
+    .tab-bar-item {
+      width: 100%;
+      height: 80rpx;
+      display: inline;
+
+      margin-bottom: 4rpx;
+    }
+
     image {
       width: 100%;
       height: 80rpx;
