--- a/components/real-tab-bar/real-tab-bar.less
+++ b/components/real-tab-bar/real-tab-bar.less
@@ -30,6 +30,9 @@
       height: 80rpx;
       display: inline;
 
+      background-position: center;
+      background-repeat: no-repeat;
+
       margin-bottom: 4rpx;
     }
 
