--- a/components/real-tab-bar/real-tab-bar.wxml
+++ b/components/real-tab-bar/real-tab-bar.wxml
@@ -1,9 +1,9 @@
 <!--components/real-tab-bar/avatar-display.wxml-->
 <view class="container">
   <view class="tab-bar-border"/>
-  <view wx:for="{{pages}}" wx:key="index"
-        data-item="{{item}}" data-index="{{index}}"
-        bindtap="onTap">
+  <view class="menu-item" bindtap="onTap"
+        wx:for="{{pages}}" wx:key="index"
+        data-item="{{item}}" data-index="{{index}}">
     <view class="tab-bar-item" style="{{item.style}}"/>
 <!--    <image class="{{item.command && showMainMenu && 'animation'}}"-->
 <!--           src="{{index == curPageIndex ? item.selectedIconPath : item.iconPath}}"-->
