--- a/pages/main/main.wxml
+++ b/pages/main/main.wxml
@@ -130,8 +130,8 @@
       <image class="top-img" src="/assets/main/close.png" mode="heightFix"
              bind:tap="onClickHide" data-window="Start" />
     </view>
-    <image class="clock-img" src="{{item.thumbnailFileId}}" mode="widthFix" />
-    <van-slider value="{{focus.duration}}" min="{{item.minDuration}}" max="{{item.maxDuration}}" bind:drag="onDragTime" />
+    <image class="clock-img" src="{{room.thumbnailFileId}}" mode="widthFix" />
+    <van-slider value="{{focus.duration}}" min="{{room.minDuration}}" max="{{room.maxDuration}}" bind:drag="onDragTime" />
     <view class="time">
       专注时长
       <text>{{focus.duration}}</text>
