--- a/src/routes/WhiteBoard/components/BaseRow/index.css
+++ b/src/routes/WhiteBoard/components/BaseRow/index.css
@@ -43,7 +43,7 @@
 .row-middle {
     height: 60px;
     width: 700px;
-    background-color: #282c34;
+    /*background-color: #282c34;*/
     display: flex;
     align-items: center;
     justify-content: right;
@@ -51,7 +51,7 @@
 .avatar-group {
     height: 50px;
     width: fit-content;
-    background-color: #dbff92;
+    /*background-color: #dbff92;*/
     display: flex;
     flex-direction: row;
     align-items: center;
