--- a/src/routes/WhiteBoard/components/ToolList/index.css
+++ b/src/routes/WhiteBoard/components/ToolList/index.css
@@ -8,11 +8,13 @@
     display: flex;
     flex-direction: row;
     align-items: center;
-    justify-content: space-between;
+    justify-content: center;
 }
 .tool-do {
+    position: absolute;
+    left: 10%;
     height: 60px;
-    width: 200px;
+    width: auto;
     /*background-color: #282c34;*/
     display: flex;
     flex-direction: row;
@@ -63,7 +65,7 @@
 }
 .tool-bar {
     height: 50px;
-    width: 600px;
+    width: fit-content;
     padding: 0 15px;
     /*width: fit-content;*/
     border-radius: 10px;
@@ -75,24 +77,41 @@
     align-items: center;
     justify-content: space-between;
 }
-.bar-minbox {
-    height: 50px;
-    width: 100px;
-    /*background-color: #282c34;*/
+
+.separate{
+    border-right: lightgray 2px solid;
+}
+
+/*.bar-minbox {*/
+/*    height: 50px;*/
+/*    width: 100px;*/
+/*    !*background-color: #282c34;*!*/
+/*    display: flex;*/
+/*    flex-direction: row;*/
+/*    align-items: center;*/
+/*    justify-content: space-between;*/
+/*}*/
+/*.bar-maxbox {*/
+/*    height: 50px;*/
+/*    width: fit-content;*/
+/*    padding: 0 10px;*/
+/*    display: flex;*/
+/*    flex-direction: row;*/
+/*    align-items: center;*/
+/*    justify-content: space-between;*/
+/*    !*background-color: #282c34;*!*/
+/*}*/
+
+.bar-box {
+    height: 40px;
+    width: fit-content;
+    padding: 0 10px;
     display: flex;
     flex-direction: row;
     align-items: center;
     justify-content: space-between;
 }
-.bar-maxbox {
-    height: 50px;
-    width: 120px;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-between;
-    /*background-color: #282c34;*/
-}
+
 .tool-zhanwei {
     height: 60px;
     width: 200px;
